p3/y.output
State 10 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: INICIO bloque

    2 bloque: inicio_de_bloque declar_variables_locales declar_de_subprogs sentencias fin_de_bloque

    3 declar_de_subprogs: declar_de_subprogs declar_subprog
    4                   | %empty

    5 declar_subprog: cabecera_subprograma bloque

    6 declar_variables_locales: marca_ini_declar_variables variables_locales marca_fin_declar_variables
    7                         | %empty

    8 marca_ini_declar_variables: INI_VAR

    9 marca_fin_declar_variables: FIN_VAR

   10 inicio_de_bloque: INI_BLOQUE

   11 fin_de_bloque: FIN_BLOQUE

   12 variables_locales: variables_locales cuerpo_declar_variables
   13                  | cuerpo_declar_variables

   14 cuerpo_declar_variables: tipo lista_variables PYC
   15                        | error

   16 cabecera_subprograma: PROC IDENTIFICADOR PAR_IZQ lista_parametros PAR_DER
   17                     | error

   18 sentencias: sentencias sentencia
   19           | %empty

   20 sentencia: bloque
   21          | sentencia_asignacion PYC
   22          | sentencia_if
   23          | sentencia_while
   24          | sentencia_entrada PYC
   25          | sentencia_salida PYC
   26          | sentencia_llamada_proc PYC
   27          | sentencia_do_until PYC
   28          | sentencia_anadir_elemento PYC
   29          | sentencia_eliminar_elemento PYC
   30          | sentencia_return PYC
   31          | error

   32 sentencia_asignacion: IDENTIFICADOR IGUAL expresion
   33                     | acceso_lista IGUAL expresion

   34 sentencia_if: IF PAR_IZQ expresion PAR_DER sentencia
   35             | IF PAR_IZQ expresion PAR_DER sentencia ELSE sentencia

   36 sentencia_while: WHILE PAR_IZQ expresion PAR_DER sentencia

   37 sentencia_entrada: READ lista_variables

   38 sentencia_salida: PRINT lista_expresiones_o_cadena

   39 sentencia_do_until: DO PAR_IZQ sentencia PAR_DER UNTIL PAR_IZQ expresion PAR_DER

   40 sentencia_return: RETURN

   41 expresion: PAR_IZQ expresion PAR_DER
   42          | OP_UNARIO expresion
   43          | MENOS expresion
   44          | expresion OP_BINARIO expresion
   45          | expresion MENOS expresion
   46          | IDENTIFICADOR
   47          | constante
   48          | acceso_lista

   49 acceso_lista: IDENTIFICADOR COR_IZQ expresion COR_DER

   50 sentencia_anadir_elemento: INSERT PAR_IZQ IDENTIFICADOR COMA expresion COMA expresion PAR_DER

   51 sentencia_eliminar_elemento: REMOVE PAR_IZQ IDENTIFICADOR COMA expresion PAR_DER

   52 sentencia_llamada_proc: IDENTIFICADOR PAR_IZQ lista_expresiones PAR_DER

   53 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion
   54                           | lista_expresiones_o_cadena COMA CADENA
   55                           | CADENA
   56                           | expresion

   57 lista_expresiones: lista_expresiones COMA expresion
   58                  | expresion
   59                  | %empty

   60 lista_variables: IDENTIFICADOR COMA lista_variables
   61                | IDENTIFICADOR

   62 lista_parametros: parametro COMA lista_parametros
   63                 | parametro
   64                 | %empty

   65 parametro: MUT tipo IDENTIFICADOR
   66          | tipo IDENTIFICADOR

   67 tipo: TIPO_BASICO
   68     | LIST TIPO_BASICO

   69 constante: ENTERO
   70          | REAL
   71          | CARACTER
   72          | BOOL
   73          | lista

   74 lista: COR_IZQ lista_expresiones COR_DER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 15 17 31
    INICIO (258) 1
    INI_VAR (259) 8
    FIN_VAR (260) 9
    PROC (261) 16
    PAR_IZQ (262) 16 34 35 36 39 41 50 51 52
    PAR_DER (263) 16 34 35 36 39 41 50 51 52
    COR_IZQ (264) 49 74
    COR_DER (265) 49 74
    PYC (266) 14 21 24 25 26 27 28 29 30
    INI_BLOQUE (267) 10
    FIN_BLOQUE (268) 11
    OP_BINARIO (269) 44
    OP_UNARIO (270) 42
    MENOS (271) 43 45
    BOOL (272) 72
    IF (273) 34 35
    WHILE (274) 36
    DO (275) 39
    UNTIL (276) 39
    RETURN (277) 40
    READ (278) 37
    PRINT (279) 38
    MUT (280) 65
    ENTERO (281) 69
    REAL (282) 70
    IDENTIFICADOR (283) 16 32 46 49 50 51 52 60 61 65 66
    TIPO_BASICO (284) 67 68
    LIST (285) 68
    INSERT (286) 50
    REMOVE (287) 51
    CADENA (288) 54 55
    COMA (289) 50 51 53 54 57 60 62
    IGUAL (290) 32 33
    CARACTER (291) 71
    ELSE (292) 35


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 1
        on right: 0
    bloque (40)
        on left: 2
        on right: 1 5 20
    declar_de_subprogs (41)
        on left: 3 4
        on right: 2 3
    declar_subprog (42)
        on left: 5
        on right: 3
    declar_variables_locales (43)
        on left: 6 7
        on right: 2
    marca_ini_declar_variables (44)
        on left: 8
        on right: 6
    marca_fin_declar_variables (45)
        on left: 9
        on right: 6
    inicio_de_bloque (46)
        on left: 10
        on right: 2
    fin_de_bloque (47)
        on left: 11
        on right: 2
    variables_locales (48)
        on left: 12 13
        on right: 6 12
    cuerpo_declar_variables (49)
        on left: 14 15
        on right: 12 13
    cabecera_subprograma (50)
        on left: 16 17
        on right: 5
    sentencias (51)
        on left: 18 19
        on right: 2 18
    sentencia (52)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 18 34 35 36 39
    sentencia_asignacion (53)
        on left: 32 33
        on right: 21
    sentencia_if (54)
        on left: 34 35
        on right: 22
    sentencia_while (55)
        on left: 36
        on right: 23
    sentencia_entrada (56)
        on left: 37
        on right: 24
    sentencia_salida (57)
        on left: 38
        on right: 25
    sentencia_do_until (58)
        on left: 39
        on right: 27
    sentencia_return (59)
        on left: 40
        on right: 30
    expresion (60)
        on left: 41 42 43 44 45 46 47 48
        on right: 32 33 34 35 36 39 41 42 43 44 45 49 50 51 53 56 57 58
    acceso_lista (61)
        on left: 49
        on right: 33 48
    sentencia_anadir_elemento (62)
        on left: 50
        on right: 28
    sentencia_eliminar_elemento (63)
        on left: 51
        on right: 29
    sentencia_llamada_proc (64)
        on left: 52
        on right: 26
    lista_expresiones_o_cadena (65)
        on left: 53 54 55 56
        on right: 38 53 54
    lista_expresiones (66)
        on left: 57 58 59
        on right: 52 57 74
    lista_variables (67)
        on left: 60 61
        on right: 14 37 60
    lista_parametros (68)
        on left: 62 63 64
        on right: 16 62
    parametro (69)
        on left: 65 66
        on right: 62 63
    tipo (70)
        on left: 67 68
        on right: 14 65 66
    constante (71)
        on left: 69 70 71 72 73
        on right: 47
    lista (72)
        on left: 74
        on right: 73


State 0

    0 $accept: . programa $end

    INICIO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: INICIO . bloque

    INI_BLOQUE  shift, and go to state 3

    bloque            go to state 4
    inicio_de_bloque  go to state 5


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


State 3

   10 inicio_de_bloque: INI_BLOQUE .

    $default  reduce using rule 10 (inicio_de_bloque)


State 4

    1 programa: INICIO bloque .

    $default  reduce using rule 1 (programa)


State 5

    2 bloque: inicio_de_bloque . declar_variables_locales declar_de_subprogs sentencias fin_de_bloque

    INI_VAR  shift, and go to state 7

    $default  reduce using rule 7 (declar_variables_locales)

    declar_variables_locales    go to state 8
    marca_ini_declar_variables  go to state 9


State 6

    0 $accept: programa $end .

    $default  accept


State 7

    8 marca_ini_declar_variables: INI_VAR .

    $default  reduce using rule 8 (marca_ini_declar_variables)


State 8

    2 bloque: inicio_de_bloque declar_variables_locales . declar_de_subprogs sentencias fin_de_bloque

    $default  reduce using rule 4 (declar_de_subprogs)

    declar_de_subprogs  go to state 10


State 9

    6 declar_variables_locales: marca_ini_declar_variables . variables_locales marca_fin_declar_variables

    error        shift, and go to state 11
    TIPO_BASICO  shift, and go to state 12
    LIST         shift, and go to state 13

    variables_locales        go to state 14
    cuerpo_declar_variables  go to state 15
    tipo                     go to state 16


State 10

    2 bloque: inicio_de_bloque declar_variables_locales declar_de_subprogs . sentencias fin_de_bloque
    3 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error  shift, and go to state 17
    PROC   shift, and go to state 18

    error          [reduce using rule 19 (sentencias)]
    INI_BLOQUE     reduce using rule 19 (sentencias)
    FIN_BLOQUE     reduce using rule 19 (sentencias)
    IF             reduce using rule 19 (sentencias)
    WHILE          reduce using rule 19 (sentencias)
    DO             reduce using rule 19 (sentencias)
    RETURN         reduce using rule 19 (sentencias)
    READ           reduce using rule 19 (sentencias)
    PRINT          reduce using rule 19 (sentencias)
    IDENTIFICADOR  reduce using rule 19 (sentencias)
    INSERT         reduce using rule 19 (sentencias)
    REMOVE         reduce using rule 19 (sentencias)

    declar_subprog        go to state 19
    cabecera_subprograma  go to state 20
    sentencias            go to state 21


State 11

   15 cuerpo_declar_variables: error .

    $default  reduce using rule 15 (cuerpo_declar_variables)


State 12

   67 tipo: TIPO_BASICO .

    $default  reduce using rule 67 (tipo)


State 13

   68 tipo: LIST . TIPO_BASICO

    TIPO_BASICO  shift, and go to state 22


State 14

    6 declar_variables_locales: marca_ini_declar_variables variables_locales . marca_fin_declar_variables
   12 variables_locales: variables_locales . cuerpo_declar_variables

    error        shift, and go to state 11
    FIN_VAR      shift, and go to state 23
    TIPO_BASICO  shift, and go to state 12
    LIST         shift, and go to state 13

    marca_fin_declar_variables  go to state 24
    cuerpo_declar_variables     go to state 25
    tipo                        go to state 16


State 15

   13 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 13 (variables_locales)


State 16

   14 cuerpo_declar_variables: tipo . lista_variables PYC

    IDENTIFICADOR  shift, and go to state 26

    lista_variables  go to state 27


State 17

   17 cabecera_subprograma: error .

    $default  reduce using rule 17 (cabecera_subprograma)


State 18

   16 cabecera_subprograma: PROC . IDENTIFICADOR PAR_IZQ lista_parametros PAR_DER

    IDENTIFICADOR  shift, and go to state 28


State 19

    3 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 3 (declar_de_subprogs)


State 20

    5 declar_subprog: cabecera_subprograma . bloque

    INI_BLOQUE  shift, and go to state 3

    bloque            go to state 29
    inicio_de_bloque  go to state 5


State 21

    2 bloque: inicio_de_bloque declar_variables_locales declar_de_subprogs sentencias . fin_de_bloque
   18 sentencias: sentencias . sentencia

    error          shift, and go to state 30
    INI_BLOQUE     shift, and go to state 3
    FIN_BLOQUE     shift, and go to state 31
    IF             shift, and go to state 32
    WHILE          shift, and go to state 33
    DO             shift, and go to state 34
    RETURN         shift, and go to state 35
    READ           shift, and go to state 36
    PRINT          shift, and go to state 37
    IDENTIFICADOR  shift, and go to state 38
    INSERT         shift, and go to state 39
    REMOVE         shift, and go to state 40

    bloque                       go to state 41
    inicio_de_bloque             go to state 5
    fin_de_bloque                go to state 42
    sentencia                    go to state 43
    sentencia_asignacion         go to state 44
    sentencia_if                 go to state 45
    sentencia_while              go to state 46
    sentencia_entrada            go to state 47
    sentencia_salida             go to state 48
    sentencia_do_until           go to state 49
    sentencia_return             go to state 50
    acceso_lista                 go to state 51
    sentencia_anadir_elemento    go to state 52
    sentencia_eliminar_elemento  go to state 53
    sentencia_llamada_proc       go to state 54


State 22

   68 tipo: LIST TIPO_BASICO .

    $default  reduce using rule 68 (tipo)


State 23

    9 marca_fin_declar_variables: FIN_VAR .

    $default  reduce using rule 9 (marca_fin_declar_variables)


State 24

    6 declar_variables_locales: marca_ini_declar_variables variables_locales marca_fin_declar_variables .

    $default  reduce using rule 6 (declar_variables_locales)


State 25

   12 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 12 (variables_locales)


State 26

   60 lista_variables: IDENTIFICADOR . COMA lista_variables
   61                | IDENTIFICADOR .

    COMA  shift, and go to state 55

    $default  reduce using rule 61 (lista_variables)


State 27

   14 cuerpo_declar_variables: tipo lista_variables . PYC

    PYC  shift, and go to state 56


State 28

   16 cabecera_subprograma: PROC IDENTIFICADOR . PAR_IZQ lista_parametros PAR_DER

    PAR_IZQ  shift, and go to state 57


State 29

    5 declar_subprog: cabecera_subprograma bloque .

    $default  reduce using rule 5 (declar_subprog)


State 30

   31 sentencia: error .

    $default  reduce using rule 31 (sentencia)


State 31

   11 fin_de_bloque: FIN_BLOQUE .

    $default  reduce using rule 11 (fin_de_bloque)


State 32

   34 sentencia_if: IF . PAR_IZQ expresion PAR_DER sentencia
   35             | IF . PAR_IZQ expresion PAR_DER sentencia ELSE sentencia

    PAR_IZQ  shift, and go to state 58


State 33

   36 sentencia_while: WHILE . PAR_IZQ expresion PAR_DER sentencia

    PAR_IZQ  shift, and go to state 59


State 34

   39 sentencia_do_until: DO . PAR_IZQ sentencia PAR_DER UNTIL PAR_IZQ expresion PAR_DER

    PAR_IZQ  shift, and go to state 60


State 35

   40 sentencia_return: RETURN .

    $default  reduce using rule 40 (sentencia_return)


State 36

   37 sentencia_entrada: READ . lista_variables

    IDENTIFICADOR  shift, and go to state 26

    lista_variables  go to state 61


State 37

   38 sentencia_salida: PRINT . lista_expresiones_o_cadena

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CADENA         shift, and go to state 70
    CARACTER       shift, and go to state 71

    expresion                   go to state 72
    acceso_lista                go to state 73
    lista_expresiones_o_cadena  go to state 74
    constante                   go to state 75
    lista                       go to state 76


State 38

   32 sentencia_asignacion: IDENTIFICADOR . IGUAL expresion
   49 acceso_lista: IDENTIFICADOR . COR_IZQ expresion COR_DER
   52 sentencia_llamada_proc: IDENTIFICADOR . PAR_IZQ lista_expresiones PAR_DER

    PAR_IZQ  shift, and go to state 77
    COR_IZQ  shift, and go to state 78
    IGUAL    shift, and go to state 79


State 39

   50 sentencia_anadir_elemento: INSERT . PAR_IZQ IDENTIFICADOR COMA expresion COMA expresion PAR_DER

    PAR_IZQ  shift, and go to state 80


State 40

   51 sentencia_eliminar_elemento: REMOVE . PAR_IZQ IDENTIFICADOR COMA expresion PAR_DER

    PAR_IZQ  shift, and go to state 81


State 41

   20 sentencia: bloque .

    $default  reduce using rule 20 (sentencia)


State 42

    2 bloque: inicio_de_bloque declar_variables_locales declar_de_subprogs sentencias fin_de_bloque .

    $default  reduce using rule 2 (bloque)


State 43

   18 sentencias: sentencias sentencia .

    $default  reduce using rule 18 (sentencias)


State 44

   21 sentencia: sentencia_asignacion . PYC

    PYC  shift, and go to state 82


State 45

   22 sentencia: sentencia_if .

    $default  reduce using rule 22 (sentencia)


State 46

   23 sentencia: sentencia_while .

    $default  reduce using rule 23 (sentencia)


State 47

   24 sentencia: sentencia_entrada . PYC

    PYC  shift, and go to state 83


State 48

   25 sentencia: sentencia_salida . PYC

    PYC  shift, and go to state 84


State 49

   27 sentencia: sentencia_do_until . PYC

    PYC  shift, and go to state 85


State 50

   30 sentencia: sentencia_return . PYC

    PYC  shift, and go to state 86


State 51

   33 sentencia_asignacion: acceso_lista . IGUAL expresion

    IGUAL  shift, and go to state 87


State 52

   28 sentencia: sentencia_anadir_elemento . PYC

    PYC  shift, and go to state 88


State 53

   29 sentencia: sentencia_eliminar_elemento . PYC

    PYC  shift, and go to state 89


State 54

   26 sentencia: sentencia_llamada_proc . PYC

    PYC  shift, and go to state 90


State 55

   60 lista_variables: IDENTIFICADOR COMA . lista_variables

    IDENTIFICADOR  shift, and go to state 26

    lista_variables  go to state 91


State 56

   14 cuerpo_declar_variables: tipo lista_variables PYC .

    $default  reduce using rule 14 (cuerpo_declar_variables)


State 57

   16 cabecera_subprograma: PROC IDENTIFICADOR PAR_IZQ . lista_parametros PAR_DER

    MUT          shift, and go to state 92
    TIPO_BASICO  shift, and go to state 12
    LIST         shift, and go to state 13

    $default  reduce using rule 64 (lista_parametros)

    lista_parametros  go to state 93
    parametro         go to state 94
    tipo              go to state 95


State 58

   34 sentencia_if: IF PAR_IZQ . expresion PAR_DER sentencia
   35             | IF PAR_IZQ . expresion PAR_DER sentencia ELSE sentencia

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 96
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 59

   36 sentencia_while: WHILE PAR_IZQ . expresion PAR_DER sentencia

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 97
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 60

   39 sentencia_do_until: DO PAR_IZQ . sentencia PAR_DER UNTIL PAR_IZQ expresion PAR_DER

    error          shift, and go to state 30
    INI_BLOQUE     shift, and go to state 3
    IF             shift, and go to state 32
    WHILE          shift, and go to state 33
    DO             shift, and go to state 34
    RETURN         shift, and go to state 35
    READ           shift, and go to state 36
    PRINT          shift, and go to state 37
    IDENTIFICADOR  shift, and go to state 38
    INSERT         shift, and go to state 39
    REMOVE         shift, and go to state 40

    bloque                       go to state 41
    inicio_de_bloque             go to state 5
    sentencia                    go to state 98
    sentencia_asignacion         go to state 44
    sentencia_if                 go to state 45
    sentencia_while              go to state 46
    sentencia_entrada            go to state 47
    sentencia_salida             go to state 48
    sentencia_do_until           go to state 49
    sentencia_return             go to state 50
    acceso_lista                 go to state 51
    sentencia_anadir_elemento    go to state 52
    sentencia_eliminar_elemento  go to state 53
    sentencia_llamada_proc       go to state 54


State 61

   37 sentencia_entrada: READ lista_variables .

    $default  reduce using rule 37 (sentencia_entrada)


State 62

   41 expresion: PAR_IZQ . expresion PAR_DER

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 99
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 63

   74 lista: COR_IZQ . lista_expresiones COR_DER

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    $default  reduce using rule 59 (lista_expresiones)

    expresion          go to state 100
    acceso_lista       go to state 73
    lista_expresiones  go to state 101
    constante          go to state 75
    lista              go to state 76


State 64

   42 expresion: OP_UNARIO . expresion

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 102
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 65

   43 expresion: MENOS . expresion

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 103
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 66

   72 constante: BOOL .

    $default  reduce using rule 72 (constante)


State 67

   69 constante: ENTERO .

    $default  reduce using rule 69 (constante)


State 68

   70 constante: REAL .

    $default  reduce using rule 70 (constante)


State 69

   46 expresion: IDENTIFICADOR .
   49 acceso_lista: IDENTIFICADOR . COR_IZQ expresion COR_DER

    COR_IZQ  shift, and go to state 78

    $default  reduce using rule 46 (expresion)


State 70

   55 lista_expresiones_o_cadena: CADENA .

    $default  reduce using rule 55 (lista_expresiones_o_cadena)


State 71

   71 constante: CARACTER .

    $default  reduce using rule 71 (constante)


State 72

   44 expresion: expresion . OP_BINARIO expresion
   45          | expresion . MENOS expresion
   56 lista_expresiones_o_cadena: expresion .

    OP_BINARIO  shift, and go to state 104
    MENOS       shift, and go to state 105

    $default  reduce using rule 56 (lista_expresiones_o_cadena)


State 73

   48 expresion: acceso_lista .

    $default  reduce using rule 48 (expresion)


State 74

   38 sentencia_salida: PRINT lista_expresiones_o_cadena .
   53 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expresion
   54                           | lista_expresiones_o_cadena . COMA CADENA

    COMA  shift, and go to state 106

    $default  reduce using rule 38 (sentencia_salida)


State 75

   47 expresion: constante .

    $default  reduce using rule 47 (expresion)


State 76

   73 constante: lista .

    $default  reduce using rule 73 (constante)


State 77

   52 sentencia_llamada_proc: IDENTIFICADOR PAR_IZQ . lista_expresiones PAR_DER

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    $default  reduce using rule 59 (lista_expresiones)

    expresion          go to state 100
    acceso_lista       go to state 73
    lista_expresiones  go to state 107
    constante          go to state 75
    lista              go to state 76


State 78

   49 acceso_lista: IDENTIFICADOR COR_IZQ . expresion COR_DER

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 108
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 79

   32 sentencia_asignacion: IDENTIFICADOR IGUAL . expresion

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 109
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 80

   50 sentencia_anadir_elemento: INSERT PAR_IZQ . IDENTIFICADOR COMA expresion COMA expresion PAR_DER

    IDENTIFICADOR  shift, and go to state 110


State 81

   51 sentencia_eliminar_elemento: REMOVE PAR_IZQ . IDENTIFICADOR COMA expresion PAR_DER

    IDENTIFICADOR  shift, and go to state 111


State 82

   21 sentencia: sentencia_asignacion PYC .

    $default  reduce using rule 21 (sentencia)


State 83

   24 sentencia: sentencia_entrada PYC .

    $default  reduce using rule 24 (sentencia)


State 84

   25 sentencia: sentencia_salida PYC .

    $default  reduce using rule 25 (sentencia)


State 85

   27 sentencia: sentencia_do_until PYC .

    $default  reduce using rule 27 (sentencia)


State 86

   30 sentencia: sentencia_return PYC .

    $default  reduce using rule 30 (sentencia)


State 87

   33 sentencia_asignacion: acceso_lista IGUAL . expresion

    PAR_IZQ        shift, and go to state 62
    COR_IZQ        shift, and go to state 63
    OP_UNARIO      shift, and go to state 64
    MENOS          shift, and go to state 65
    BOOL           shift, and go to state 66
    ENTERO         shift, and go to state 67
    REAL           shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 69
    CARACTER       shift, and go to state 71

    expresion     go to state 112
    acceso_lista  go to state 73
    constante     go to state 75
    lista         go to state 76


State 88

   28 sentencia: sentencia_anadir_elemento PYC .

    $default  reduce using rule 28 (sentencia)


State 89

   29 sentencia: sentencia_eliminar_elemento PYC .

    $default  reduce using rule 29 (sentencia)


State 90

   26 sentencia: sentencia_llamada_proc PYC .

    $default  reduce using rule 26 (sentencia)


State 91

   60 lista_variables: IDENTIFICADOR COMA lista_variables .

    $default  reduce using rule 60 (lista_variables)


State 92

   65 parametro: MUT . tipo IDENTIFICADOR

    TIPO_BASICO  shift, and go to state 12
    LIST         shift, and go to state 13

    tipo  go to state 113


State 93

   16 cabecera_subprograma: PROC IDENTIFICADOR PAR_IZQ lista_parametros . PAR_DER

    PAR_DER  shift, and go to state 114


State 94

   62 lista_parametros: parametro . COMA lista_parametros
   63                 | parametro .

    COMA  shift, and go to state 115

    $default  reduce using rule 63 (lista_parametros)


State 95

   66 parametro: tipo . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 116


State 96

   34 sentencia_if: IF PAR_IZQ expresion . PAR_DER sentencia
   35             | IF PAR_IZQ expresion . PAR_DER sentencia ELSE sentencia
   44 expresion: expresion . OP_BINARIO expresion
   45          | expresion . MENOS expresion

    PAR_DER     shift, and go to state 117
    OP_BINARIO  shift, and go to state 104
    MENOS       shift, and go to state 105


State 97
